-Added Interface GameSearchClient -A little fix names -Added Tests for RecommendationEngine